making window draggable and maximized window will be centered

--- a/index.html
+++ b/index.html
@@ -12,26 +12,33 @@
 
   <img src="67586673.jpeg" alt="" id="pict" />
 
-  <div class="background">
-    <div class="terminal-body">
-      
-      <div class="title">
-        <span>DAPP_DEV</span>
-        <div class="controls">
-          <a href="#" class="termbtn"><i class="fas fa-minus-circle"></i></a>
-          <a href="#" class="maximizebtn"><i class="fas fa-chevron-circle-up"></i></a>
-          <a href="#" class="minimizebtn" style="display: none"><i class="fas fa-chevron-circle-down"></i></a>
-          <a href="#" class="termbtn"><i class="fas fa-times-circle"></i></a>
+  <div class="window">
+
+
+    <div class="background">
+      <div class="terminal-body">
+
+        <div class="title terminal-title">
+          <span>DAPP_DEV</span>
+          <div class="controls">
+            <a href="#" class="termbtn"><i class="fas fa-minus-circle"></i></a>
+            <a href="#" class="maximizebtn"><i class="fas fa-chevron-circle-up"></i></a>
+            <a href="#" class="minimizebtn" style="display: none"><i class="fas fa-chevron-circle-down"></i></a>
+            <a href="#" class="termbtn"><i class="fas fa-times-circle"></i></a>
+          </div>
         </div>
-      </div>
-      <div class="terminal">
+        <div class="terminal terminal-content">
+
+        </div>
 
       </div>
-
     </div>
+
+
   </div>
 
 
   <script src="js/terminal.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 </body>
 </html>
