removed unnecessary text

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
 
   <div class="window">
 
-
     <div class="background">
       <div class="terminal-body">
-
         <div class="title terminal-title">
           <span>DAPP_DEV</span>
           <div class="controls">
@@ -28,12 +26,10 @@
           </div>
         </div>
         <div class="terminal terminal-content">
-
+          <!-- terminal content -->
         </div>
-
       </div>
     </div>
-
 
   </div>
 
