Modified README and app name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://unpkg.com/jquery.terminal/css/jquery.terminal.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
-  <title>DAPP_DEV</title>
+  <title>WEB_TERMINAL</title>
 </head>
 <body>
 
@@ -17,7 +17,7 @@
     <div class="background">
       <div class="terminal-body">
         <div class="title terminal-title">
-          <span>DAPP_DEV</span>
+          <span>WEB_TERMINAL</span>
           <div class="controls">
             <a href="#" class="termbtn"><i class="fas fa-minus-circle"></i></a>
             <a href="#" class="maximizebtn"><i class="fas fa-chevron-circle-up"></i></a>
